B-F Sandbox Full-Backup/src/objects/Store_Check__c.object
<CustomObject>
    <description>A store check is a controll visit by the sales manager after his sales rep has just left the outlet and entered his outlet visit data.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Store Checks</relationshipLabel>
        <relationshipName>Store_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Addit_notes_comments_about_cust_acc__c</fullName>
        <label>Addit. notes/comments about cust./acc.</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Account__r.BillingStreet +&apos;, &apos;+ Account__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_pricing_labels_available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All pricing labels available?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B_F_listing_complete_realized_practiced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>B-F listing complete realized/practiced?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_maintenance_in_SF_complete_correct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data maintenance in SF complete/correct?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discussed_with__c</fullName>
        <label>Discussed with</label>
        <picklist>
            <picklistValues>
                <fullName>Store manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food area manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Gaps_in_shelf_closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gaps in shelf closed..?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gift_promo_packs_addit_avail_in_shelf__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gift/promo packs addit. avail. in shelf?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gift_promo_packs_in_shelf_available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gift/promo packs in shelf available?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ground_Area_Second_SCP__c</fullName>
        <label>Ground Area</label>
        <picklist>
            <picklistValues>
                <fullName>cash area/point of sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>turn stile area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>food area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>main corridor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>side corridor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>promotion end cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>end cap spirit department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>display refrigerator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>other place</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ground_Area_Third_SCP__c</fullName>
        <label>Ground Area</label>
        <picklist>
            <picklistValues>
                <fullName>cash area/point of sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>turn stile area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>food area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>main corridor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>side corridor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>promotion end cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>end cap spirit department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>display refrigerator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>other place</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ground_Area_first_SCP__c</fullName>
        <label>Ground Area</label>
        <picklist>
            <picklistValues>
                <fullName>cash area/point of sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>turn stile area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>food area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>main corridor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>side corridor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>promotion end cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>end cap spirit department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>display refrigerator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>other place</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JD_Cola_Ginger_avail_as_in_multi_pack__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JD&amp;Cola/Ginger avail. as/in multi pack?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JD_Cola_Ginger_avail_as_single_can__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JD &amp; Cola/Ginger avail. as single can?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JD_Cola_Ginger_avail_in_chiller_cab__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JD &amp; Cola/Ginger avail. in chiller cab.?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JD_Cola_Ginger_available_in_shelf__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JD &amp; Cola/Ginger available in shelf?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JD_Cola_Ginger_available_in_tray__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JD &amp; Cola/Ginger available in tray?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Outlet_Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Outlet Visit</label>
        <referenceTo>Outlet_Visit__c</referenceTo>
        <relationshipLabel>Store Checks</relationshipLabel>
        <relationshipName>Store_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Visit_SR__c</fullName>
        <label>Last Visit SR</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location_first_SCP__c</fullName>
        <description>Location of the target article/product</description>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Store front</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(shelf) End cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spirit department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chiller cabinet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check out area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food section</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_second_SCP__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Store front</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(shelf) End cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spirit department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chiller cabinet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check out area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food section</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_third_SCP__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Store front</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(shelf) End cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spirit department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chiller cabinet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check out area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food section</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Store Checks</relationshipLabel>
        <relationshipName>Store_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes_Comment_about_shelf_situation__c</fullName>
        <label>Notes/Comment about shelf situation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes_comments_about_secondary_placement__c</fullName>
        <label>Notes/comments about secondary placement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_bottles_display_First_SCP__c</fullName>
        <label>Number of bottles/display</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_bottles_display_Second_SCP__c</fullName>
        <label>Number of bottles/display</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_bottles_display_Third_SCP__c</fullName>
        <label>Number of bottles/display</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_first_SCP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Store Checks</relationshipLabel>
        <relationshipName>Store_Checks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_second_SCP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Store Checks (Product)</relationshipLabel>
        <relationshipName>Store_Checks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_third_SCP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Store Checks (Product)</relationshipLabel>
        <relationshipName>Store_Checks2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rating_Grade__c</fullName>
        <label>Rating/Grade</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Remarks_after_discussion__c</fullName>
        <label>Remarks after discussion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SC_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SC By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Stores_Check</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SC_Date__c</fullName>
        <label>SC Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Stores_Check1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_campaign_labels_tended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales campaign labels tended?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Space_First_SCP__c</fullName>
        <label>Space</label>
        <picklist>
            <picklistValues>
                <fullName>cash area/point of sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>turn stile area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>food area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>main corridor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>side corridor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>promotion end cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>end cap spirit department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>display refrigerator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>other place</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Space_Second_SCP__c</fullName>
        <label>Space</label>
        <picklist>
            <picklistValues>
                <fullName>cash area/point of sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>turn stile area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>food area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>main corridor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>side corridor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>promotion end cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>end cap spirit department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>display refrigerator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>other place</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Space_Third_SCP__c</fullName>
        <label>Space</label>
        <picklist>
            <picklistValues>
                <fullName>cash area/point of sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>turn stile area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>food area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>main corridor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>side corridor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>promotion end cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>end cap spirit department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>display refrigerator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>other place</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Targ_for_follow_up_visit_maintained_SF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Targ. for follow up visit maintained/SF?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>enough_products_in_the_shelf_available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>enough products in the shelf available?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sales_campaign_with_2_pl_realized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>sales campaign with 2. pl. realized?</label>
        <type>Checkbox</type>
    </fields>
    <label>Store Check</label>
    <nameField>
        <displayFormat>{YYYYMM}-{00000}</displayFormat>
        <label>Store Check Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Store Checks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>